--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "sqlite3": "^5.1.6"
   }
 }
